[tool.poetry]
name = "oas-cli"
version = "0.1.0"
description = "CLI to resolve OpenAPI 3 documents"
authors = ["Renan Morais <renan.ps.morais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.9.0"}
pyyaml = "^6.0.1"
jsonschema = "^4.21.1"
jsonpath-ng = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pytest-html = "^4.1.1"
safety = "^3.0.1"
blue = "^0.9.1"
isort = "^5.13.2"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
oas = "oas_cli.__main__:cli"